--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   js: ^0.6.7  
   intl: ^0.19.0
   share_plus: ^7.2.1
+  carousel_slider: ^4.2.1
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
